--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>BibleVerseQuest — Daily (Probe Only)</title>
+  <title>BibleVersesQuest — Daily </title>
   <meta name="description" content="A daily, Bible-themed Wordle-like. Probe with any 5-letter guess for clues; solve the true KJV answer to reveal the full verse." />
   <meta name="theme-color" content="#0b0f14" />
   <meta property="og:title" content="BibleVerseQuest — Daily (Probe Only)" />
@@ -118,6 +118,32 @@
       {w:"house", r:"Joshua 24:15", v:"And if it seem evil unto you to serve the LORD, choose you this day whom ye will serve; whether the gods which your fathers served that were on the other side of the flood, or the gods of the Amorites, in whose land ye dwell: but as for me and my house, we will serve the LORD."},
       {w:"bride", r:"Revelation 21:9", v:"And there came unto me one of the seven angels which had the seven vials full of the seven last plagues, and talked with me, saying, Come hither, I will shew thee the bride, the Lamb's wife."},
       {w:"tribe", r:"Numbers 1:4", v:"And with you there shall be a man of every tribe; every one head of the house of his fathers."}
+      {w:"bring", r:"Malachi 3:10", v:"Bring ye all the tithes into the storehouse, that there may be meat in mine house, and prove me now herewith, saith the LORD of hosts, if I will not open you the windows of heaven, and pour you out a blessing, that there shall not be room enough to receive it."},
+      {w:"about", r:"Psalm 32:7", v:"Thou art my hiding place; thou shalt preserve me from trouble; thou shalt compass me about with songs of deliverance. Selah."},
+      {w:"heard", r:"Psalm 116:1", v:"I love the LORD, because he hath heard my voice and my supplications."},
+      {w:"egypt", r:"Matthew 2:15", v:"And was there until the death of Herod: that it might be fulfilled which was spoken of the Lord by the prophet, saying, Out of Egypt have I called my son."},
+      {w:"might", r:"1 John 4:9", v:"In this was manifested the love of God toward us, because that God sent his only begotten Son into the world, that we might live through him."},
+      {w:"shall", r:"Psalm 23:6", v:"Surely goodness and mercy shall follow me all the days of my life: and I will dwell in the house of the LORD for ever."},
+      {w:"their", r:"Hebrews 10:17", v:"And their sins and iniquities will I remember no more."},
+      {w:"which", r:"Psalm 118:22", v:"The stone which the builders refused is become the head stone of the corner."},
+      {w:"there", r:"Ecclesiastes 3:1", v:"To every thing there is a season, and a time to every purpose under the heaven:"},
+      {w:"house", r:"Psalm 122:1", v:"I was glad when they said unto me, Let us go into the house of the LORD."},
+      {w:"these", r:"John 20:31", v:"But these are written, that ye might believe that Jesus is the Christ, the Son of God; and that believing ye might have life through his name."},
+      {w:"jesus", r:"Matthew 1:21", v:"And she shall bring forth a son, and thou shalt call his name JESUS: for he shall save his people from their sins."},
+      {w:"david", r:"Psalm 89:20", v:"I have found David my servant; with my holy oil have I anointed him:"},
+      {w:"earth", r:"Psalm 24:1", v:"The earth is the LORD'S, and the fulness thereof; the world, and they that dwell therein."},
+      {w:"those", r:"Psalm 92:13", v:"Those that be planted in the house of the LORD shall flourish in the courts of our God."},
+      {w:"after", r:"Psalm 63:8", v:"My soul followeth hard after thee: thy right hand upholdeth me."},
+      {w:"every", r:"James 1:17", v:"Every good gift and every perfect gift is from above, and cometh down from the Father of lights, with whom is no variableness, neither shadow of turning."},
+      {w:"great", r:"Psalm 145:3", v:"Great is the LORD, and greatly to be praised; and his greatness is unsearchable."},
+      {w:"forth", r:"Isaiah 55:11", v:"So shall my word be that goeth forth out of my mouth: it shall not return unto me void, but it shall accomplish that which I please, and it shall prosper in the thing whereto I sent it."},
+      {w:"place", r:"John 14:2", v:"In my Father's house are many mansions: if it were not so, I would have told you. I go to prepare a place for you."},
+      {w:"judah", r:"2 Chronicles 20:17", v:"Ye shall not need to fight in this battle: set yourselves, stand ye still, and see the salvation of the LORD with you, O Judah and Jerusalem: fear not, nor be dismayed; to morrow go out against them: for the LORD will be with you."},
+      {w:"heart", r:"Proverbs 3:5", v:"Trust in the LORD with all thine heart; and lean not unto thine own understanding."},
+      {w:"moses", r:"Exodus 33:11", v:"And the LORD spake unto Moses face to face, as a man speaketh unto his friend."},
+      {w:"among", r:"Psalm 57:9", v:"I will praise thee, O Lord, among the people: I will sing unto thee among the nations."},
+      {w:"shalt", r:"Psalm 91:5", v:"Thou shalt not be afraid for the terror by night; nor for the arrow that flieth by day;"},
+      {w:"being", r:"Philippians 1:6", v:"Being confident of this very thing, that he which hath begun a good work in you will perform it until the day of Jesus Christ:"}
     ];
 
     function dateKey(d=new Date()){ const y=d.getFullYear(); const m=String(d.getMonth()+1).padStart(2,"0"); const day=String(d.getDate()).padStart(2,"0"); return `${y}-${m}-${day}`; }
